
[package]
name = "onslaught_counters"
version = "0.0.2"
edition = "2024"
description = "A library of types purposed for making and tracking continously changing values."
license = "Apache-2.0"



[dependencies]
# Required Dependencies
half = { version = "2.7.1", default-features = false }

# Optional Dependencies (Based on Which Features Are Activated)
serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[features]
default = []

########################### TICKER FEATURES ###############################
# Enable this if you want to support serialization and deserialization of Ticker data (e.g. for a save system).
# Enabling this will add the serde dependency.
ticker_serialize = ["serde"]
###########################################################################
